tests/assert2.dora
// error: 1

fn main() {
  var a = false;
  assert(a);
}
